added credit to experiments

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -10,6 +10,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ba3adc90",
+   "metadata": {},
+   "source": [
+    "Code below is adapted from https://medium.com/@pytorch_geometric/link-prediction-on-heterogeneous-graphs-with-pyg-6d5c29677c70."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "f828b714-8f74-4a11-a6ae-bbd6d2ba07c6",
